# cos-738-busca-e-mineracao-de-texto

./: README.md  pyproject.toml  requirements.txt
information-retrieval/: BUSCA.CFG  GLI.CFG  INDEX.CFG  PC.CFG  indexer.py  queries.csv  query_processor.py  read_cfg.py  run_all.sh  search.py  utils.py  word_frequency_ext.py
information-retrieval/resultados/: model.csv
src/: GLI.CFG  indexer.py  query_processor.py  search.py  utils.py  word_frequency.py
t1/: README.md  RELATOIRO.MD  com_stemmer.csv  pyproject.toml  run_all.sh
t1/src/: BUSCA.CFG  PC.CFG  avaliar.py  query_processor.py  search.py  word_frequency.py
t1/src/resultados/: exp_query_results.csv
tf/: dataset_division.py  embedder.py  pyproject.toml  stats.md  train.py
