[tool.poetry]
name = "cos-738-busca-e-mineracao-de-texto"
version = "0.1.0"
description = ""
authors = ["Lucas Ikuhara <lri2911@gmail.com>"]
readme = "README.md"
packages = [{include = "cos_738_busca_e_mineracao_de_texto"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
mlflow = "^2.12.1"
lxml = "^5.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
