[tool.poetry]
name = "trab-final-llm"
version = "0.1.0"
description = ""
authors = ["Lucas Ikuhara <lri2911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.4"
scikit-learn = "^1.5.1"
ollama = "^0.3.0"
llama-index = "^0.10.56"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
scikeras = "^0.13.0"
polars = "^1.2.1"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
